div stretching fixed and mytask page designed

--- a/src/MyTask/MyTask.module.css
+++ b/src/MyTask/MyTask.module.css
@@ -1,7 +1,11 @@
 #my_task {
 	grid-column: 4 / 20;
 	grid-row: 3 / 20;
-	padding: 5rem;
-	display: flex;
 	overflow: scroll;
+	padding: 5rem;
 }
+
+#page_container {
+	display: flex;
+}
+
