--- a/src/Task/Task.module.css
+++ b/src/Task/Task.module.css
@@ -33,6 +33,7 @@
 
 #cover {
 	width: 75%;
+	aspect-ratio: 1 / 1;
 	border-radius: 10%;
 }
 
