--- a/src/TaskView/TaskView.module.css
+++ b/src/TaskView/TaskView.module.css
@@ -1,6 +1,5 @@
 #task_view {
 	padding: 1.5rem;
-	height: 100%;
 }
 
 #header {
@@ -18,6 +17,7 @@
 	justify-content: flex-end;
 	/* background-color: blue; */
 }
+
 
 #prio {
 
